--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<head></head>
+	<head>
+		<link href="https://fonts.googleapis.com/css?family=Merriweather|Roboto+Slab&display=swap" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
 	<body>
 		<h1>Hello World, This is my website.</h1>
+		<p>HI THERE</p>
 	</body>
 </html>
